# asetui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: Cu111_CO.vasp  H2O.xyz  MeOH.xyz  mov2gif.sh  phenol.xyz  sn2_irc.xyz
src/asetui/: __init__.py  __main__.py  app.py  cli.py  io.py  render.py
tests/: test_app.py  test_cli.py  test_io.py  test_render.py
